--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-custom-table",
+  "name": "react-custom-table2",
   "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.ts",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/whishiper/react-custom-table.git"
+    "url": "git+https://github.com/whishiper/react-custom-table2.git"
   },
   "keywords": [
     "react",
